Fix some layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,9 @@ main {
     border-radius: 23px;
     box-shadow: 0px 25px 15px rgba(0, 0, 0, 0.2);
     width: 87vw;
-    min-height: 63vh;
-    margin-top: 15vh;
+    /* min-height: 510px; */
+    padding-bottom: 45px;
+    margin-top: 140px;
     position: relative;
 }
 
@@ -115,11 +116,14 @@ details[open] summary ~ * {
 
 footer {
     margin-top: 20%;
-    color: rgb(185, 183, 216);
+    margin-bottom: 30px;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 11px;
+    text-align: center;
 }
 
 footer a {
-    color: whitesmoke;
+    color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
 }
 
